add new graphics

--- a/notebook/TP1_NLP.ipynb
+++ b/notebook/TP1_NLP.ipynb
@@ -127,7 +127,7 @@
         "# URLs dos arquivos que serão baixados\n",
         "corpus_url = 'http://mattmahoney.net/dc/text8.zip'\n",
         "analogy_url = 'https://raw.githubusercontent.com/nicholas-leonard/word2vec/master/questions-words.txt'\n",
-        "dest_folder = 'data'\n",
+        "dest_folder = '../data'\n",
         "\n",
         "# Baixar e extrair o corpus de treinamento (text8.zip)\n",
         "download_and_extract(corpus_url, dest_folder)\n",
@@ -169,11 +169,10 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "import gensim\n",
         "from gensim.models import Phrases\n",
         "from gensim.parsing.preprocessing import remove_stopwords\n",
         "\n",
-        "corpus_path = os.path.join('data', 'text8')\n",
+        "corpus_path = os.path.join(dest_folder, 'text8')\n",
         "\n",
         "# Abre o arquivo do corpus e lê todo o conteúdo, dividindo em palavras\n",
         "with open(corpus_path, 'r', encoding='utf-8') as f:\n",
@@ -309,8 +308,8 @@
         "    'sg': [0, 1],  # 0 para CBOW, 1 para Skip-gram\n",
         "    'vector_size': [250, 300, 350], # Tamanho do embedding\n",
         "    'window': [5, 7, 10], # Janela de contexto\n",
-        "    'epochs': [10, 20, 30], # Iterações de treinamento\n",
-        "    'alpha': [0.05, 0.025, 0.01] # Taxa de aprendizado inicial\n",
+        "    'epochs': [5, 10, 20, 30], # Iterações de treinamento\n",
+        "    'alpha': [0.05, 0.025, 0.01, 0.0075] # Taxa de aprendizado inicial\n",
         "}\n",
         "\n",
         "# Gerar todas as combinações de parâmetros\n",
@@ -352,7 +351,7 @@
         "total_models = len(param_combinations)\n",
         "\n",
         "# Define a base path for models\n",
-        "model_base_path = os.path.join('data', 'word2vec_models')\n",
+        "model_base_path = os.path.join(dest_folder, 'word2vec_models')\n",
         "\n",
         "# Create the models directory if it doesn't exist\n",
         "if not os.path.exists(model_base_path):\n",
@@ -503,6 +502,119 @@
         "plt.ylabel('Distância Média')\n",
         "plt.xlabel('Taxa de Aprendizado Inicial (Alpha)')\n",
         "plt.legend(title='Arquitetura')\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8f8fcde0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Gráfico 6: Interação entre Taxa de Aprendizado (Alpha) e Épocas\n",
+        "g = sns.catplot(\n",
+        "    data=results_df,\n",
+        "    x='Épocas',\n",
+        "    y='Distância média',\n",
+        "    hue='Taxa Aprendizado',\n",
+        "    col='Arquitetura',\n",
+        "    kind='point',\n",
+        "    palette='flare',\n",
+        "    height=6,\n",
+        "    aspect=1.2\n",
+        ")\n",
+        "g.fig.suptitle('Impacto Combinado de Épocas e Taxa de Aprendizado', y=1.03)\n",
+        "g.set_axis_labels('Número de Épocas', 'Distância Média')\n",
+        "g.legend.set_title('Taxa de Aprendizado')\n",
+        "plt.show()\n",
+        "\n",
+        "# Gráfico 7: Interação entre Tamanho do Embedding e Janela de Contexto\n",
+        "g = sns.catplot(\n",
+        "    data=results_df,\n",
+        "    x='Tamanho Embedding',\n",
+        "    y='Distância média',\n",
+        "    hue='Janela Contexto',\n",
+        "    col='Arquitetura',\n",
+        "    kind='point',\n",
+        "    palette='flare',\n",
+        "    height=6,\n",
+        "    aspect=1.2\n",
+        ")\n",
+        "g.fig.suptitle('Impacto Combinado do Tamanho do Embedding e Janela de Contexto', y=1.03)\n",
+        "g.set_axis_labels('Tamanho do Embedding', 'Distância Média')\n",
+        "g.legend.set_title('Janela de Contexto')\n",
+        "plt.show()\n",
+        "\n",
+        "# Gráfico 8: Interação entre Épocas e Janela de Contexto\n",
+        "g = sns.catplot(\n",
+        "    data=results_df,\n",
+        "    x='Épocas',\n",
+        "    y='Distância média',\n",
+        "    hue='Janela Contexto',\n",
+        "    col='Arquitetura',\n",
+        "    kind='point',\n",
+        "    palette='flare',\n",
+        "    height=6,\n",
+        "    aspect=1.2\n",
+        ")\n",
+        "g.fig.suptitle('Impacto Combinado de Épocas e Janela de Contexto', y=1.03)\n",
+        "g.set_axis_labels('Número de Épocas', 'Distância Média')\n",
+        "g.legend.set_title('Janela de Contexto')\n",
+        "plt.show()\n",
+        "\n",
+        "# Gráfico 9: Interação entre Tamanho do Embedding e Taxa de Aprendizado\n",
+        "g = sns.catplot(\n",
+        "    data=results_df,\n",
+        "    x='Tamanho Embedding',\n",
+        "    y='Distância média',\n",
+        "    hue='Taxa Aprendizado',\n",
+        "    col='Arquitetura',\n",
+        "    kind='point',\n",
+        "    palette='flare',\n",
+        "    height=6,\n",
+        "    aspect=1.2\n",
+        ")\n",
+        "g.fig.suptitle('Impacto Combinado do Embedding e Taxa de Aprendizado', y=1.03)\n",
+        "g.set_axis_labels('Tamanho do Embedding', 'Distância Média')\n",
+        "g.legend.set_title('Taxa de Aprendizado')\n",
+        "plt.show()\n",
+        "\n",
+        "# Gráfico 10: Interação entre Janela de Contexto e Taxa de Aprendizado\n",
+        "g = sns.catplot(\n",
+        "    data=results_df,\n",
+        "    x='Janela Contexto',\n",
+        "    y='Distância média',\n",
+        "    hue='Taxa Aprendizado',\n",
+        "    col='Arquitetura',\n",
+        "    kind='point',\n",
+        "    palette='flare',\n",
+        "    height=6,\n",
+        "    aspect=1.2\n",
+        ")\n",
+        "g.fig.suptitle('Impacto Combinado da Janela de Contexto e Taxa de Aprendizado', y=1.03)\n",
+        "g.set_axis_labels('Janela de Contexto', 'Distância Média')\n",
+        "g.legend.set_title('Taxa de Aprendizado')\n",
+        "plt.show()\n",
+        "\n",
+        "# Gráfico 11: Interação entre Épocas e Tamanho do Embedding\n",
+        "g = sns.catplot(\n",
+        "    data=results_df,\n",
+        "    x='Épocas',\n",
+        "    y='Distância média',\n",
+        "    hue='Tamanho Embedding',\n",
+        "    col='Arquitetura',\n",
+        "    kind='point',\n",
+        "    palette='flare',\n",
+        "    height=6,\n",
+        "    aspect=1.2\n",
+        ")\n",
+        "g.fig.suptitle('Impacto Combinado de Épocas e Tamanho do Embedding', y=1.03)\n",
+        "g.set_axis_labels('Número de Épocas', 'Distância Média')\n",
+        "g.legend.set_title('Tamanho Embedding')\n",
         "plt.show()"
       ]
     }
