small graphical improvements

--- a/notebook/TP1_NLP.ipynb
+++ b/notebook/TP1_NLP.ipynb
@@ -301,7 +301,6 @@
       "outputs": [],
       "source": [
         "import itertools\n",
-        "import pandas as pd\n",
         "\n",
         "# Definindo os hiperparâmetros para o experimento\n",
         "param_grid = {\n",
@@ -440,69 +439,16 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "c8b445ac",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "c8b445ac",
-        "outputId": "5ff3da88-3e9f-4d99-9195-bb61d69832dd",
-        "tags": [
-          "ignore"
-        ]
-      },
+      "id": "ce3815a7",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
+        "import pandas as pd\n",
         "\n",
-        "# Configura o estilo dos gráficos\n",
-        "sns.set_theme(style=\"whitegrid\")\n",
+        "results_df = pd.DataFrame(results)\n",
+        "best_models = results_df.sort_values(by='Distância média')\n",
         "\n",
-        "# Gráfico 1: Comparação de Arquitetura (CBOW vs. Skip-gram)\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "sns.barplot(data=results_df, x='Arquitetura', y='Distância média')\n",
-        "plt.title('Distância Média por Arquitetura do Modelo')\n",
-        "plt.ylabel('Distância Média de Analogia')\n",
-        "plt.xlabel('Arquitetura')\n",
-        "plt.show()\n",
-        "\n",
-        "# Gráfico 2: Impacto do Tamanho do Embedding\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "sns.lineplot(data=results_df, x='Tamanho Embedding', y='Distância média', hue='Arquitetura', style='Arquitetura', markers=True, dashes=False)\n",
-        "plt.title('Impacto do Tamanho do Embedding na Distância Média')\n",
-        "plt.ylabel('Distância Média')\n",
-        "plt.xlabel('Dimensões do Vetor (Embedding Size)')\n",
-        "plt.legend(title='Arquitetura')\n",
-        "plt.show()\n",
-        "\n",
-        "# Gráfico 3: Impacto do Tamanho da Janela de Contexto\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "sns.lineplot(data=results_df, x='Janela Contexto', y='Distância média', hue='Arquitetura', style='Arquitetura', markers=True, dashes=False)\n",
-        "plt.title('Impacto da Janela de Contexto na Distância Média')\n",
-        "plt.ylabel('Distância Média')\n",
-        "plt.xlabel('Tamanho da Janela')\n",
-        "plt.legend(title='Arquitetura')\n",
-        "plt.show()\n",
-        "\n",
-        "# Gráfico 4: Impacto do Número de Épocas\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "sns.lineplot(data=results_df, x='Épocas', y='Distância média', hue='Arquitetura', style='Arquitetura', markers=True, dashes=False)\n",
-        "plt.title('Impacto do Número de Épocas na Distância Média')\n",
-        "plt.ylabel('Distância Média')\n",
-        "plt.xlabel('Iterações de Treinamento')\n",
-        "plt.legend(title='Arquitetura')\n",
-        "plt.show()\n",
-        "\n",
-        "# Gráfico 5: Impacto da Taxa de Aprendizado\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "sns.lineplot(data=results_df, x='Taxa Aprendizado', y='Distância média', hue='Arquitetura', style='Arquitetura', markers=True, dashes=False)\n",
-        "plt.title('Impacto da Taxa de Aprendizado na Distância Média')\n",
-        "plt.ylabel('Distância Média')\n",
-        "plt.xlabel('Taxa de Aprendizado Inicial (Alpha)')\n",
-        "plt.legend(title='Arquitetura')\n",
-        "plt.show()"
+        "display(best_models)"
       ]
     },
     {
@@ -514,6 +460,93 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
+        "\n",
+        "plt.rcParams['figure.dpi'] = 300\n",
+        "sns.set_theme(style=\"whitegrid\")\n",
+        "\n",
+        "# Gráfico 1: Comparação de Arquitetura\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "sns.barplot(\n",
+        "    data=results_df,\n",
+        "    x='Arquitetura',\n",
+        "    y='Distância média',\n",
+        "    hue='Arquitetura',\n",
+        "    palette='flare',\n",
+        "    capsize=.1,\n",
+        "    legend=False\n",
+        ")\n",
+        "plt.title('Distância Média por Arquitetura do Modelo', fontsize=16)\n",
+        "plt.ylabel('Distância Média de Analogia')\n",
+        "plt.xlabel('Arquitetura')\n",
+        "plt.show()\n",
+        "\n",
+        "# Gráfico 2: Impacto do Tamanho do Embedding\n",
+        "g = sns.catplot(\n",
+        "    data=results_df,\n",
+        "    x='Tamanho Embedding',\n",
+        "    y='Distância média',\n",
+        "    hue='Arquitetura',\n",
+        "    kind='point',\n",
+        "    palette='flare',\n",
+        "    height=6,\n",
+        "    aspect=1.5,\n",
+        "    legend_out=False\n",
+        ")\n",
+        "g.fig.suptitle('Impacto do Tamanho do Embedding na Distância Média', y=1.03, fontsize=16)\n",
+        "g.set_axis_labels('Dimensões do Vetor (Embedding Size)', 'Distância Média')\n",
+        "g.legend.set_title('Arquitetura')\n",
+        "plt.show()\n",
+        "\n",
+        "# Gráfico 3: Impacto do Tamanho da Janela de Contexto\n",
+        "g = sns.catplot(\n",
+        "    data=results_df,\n",
+        "    x='Janela Contexto',\n",
+        "    y='Distância média',\n",
+        "    hue='Arquitetura',\n",
+        "    kind='point',\n",
+        "    palette='flare',\n",
+        "    height=6,\n",
+        "    aspect=1.5,\n",
+        "    legend_out=False\n",
+        ")\n",
+        "g.fig.suptitle('Impacto da Janela de Contexto na Distância Média', y=1.03, fontsize=16)\n",
+        "g.set_axis_labels('Tamanho da Janela', 'Distância Média')\n",
+        "g.legend.set_title('Arquitetura')\n",
+        "plt.show()\n",
+        "\n",
+        "# Gráfico 4: Impacto do Número de Épocas\n",
+        "g = sns.catplot(\n",
+        "    data=results_df,\n",
+        "    x='Épocas',\n",
+        "    y='Distância média',\n",
+        "    hue='Arquitetura',\n",
+        "    kind='point',\n",
+        "    palette='flare',\n",
+        "    height=6,\n",
+        "    aspect=1.5,\n",
+        "    legend_out=False\n",
+        ")\n",
+        "g.fig.suptitle('Impacto do Número de Épocas na Distância Média', y=1.03, fontsize=16)\n",
+        "g.set_axis_labels('Iterações de Treinamento', 'Distância Média')\n",
+        "g.legend.set_title('Arquitetura')\n",
+        "plt.show()\n",
+        "\n",
+        "# Gráfico 5: Impacto da Taxa de Aprendizado\n",
+        "g = sns.catplot(\n",
+        "    data=results_df,\n",
+        "    x='Taxa Aprendizado',\n",
+        "    y='Distância média',\n",
+        "    hue='Arquitetura',\n",
+        "    kind='point',\n",
+        "    palette='flare',\n",
+        "    height=6,\n",
+        "    aspect=1.5,\n",
+        "    legend_out=False\n",
+        ")\n",
+        "g.fig.suptitle('Impacto da Taxa de Aprendizado na Distância Média', y=1.03, fontsize=16)\n",
+        "g.set_axis_labels('Taxa de Aprendizado Inicial (Alpha)', 'Distância Média')\n",
+        "g.legend.set_title('Arquitetura')\n",
+        "plt.show()\n",
         "\n",
         "# Gráfico 6: Interação entre Taxa de Aprendizado (Alpha) e Épocas\n",
         "g = sns.catplot(\n",
